<resources>
    <string name="app_name">Dex Builder</string>
    <string name="textview">Hello! Welcome to DEX BUILDER! \n </string>
    <string name="get_link_for_project">Get</string>
    <string name="welcome_message">Welcome! \n \n    Please choose a name for representing it on flipdex.ru</string>
    <string name="site_url">flipdex.ru/</string>
    <string name="title_activity_builder">builder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="page_name_example">example</string>
    <string name="add_new_project">add New Project</string>
    <string name="edit_project">Edit</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="title_home">Navbar</string>
    <string name="title_dashboard">Content</string>
    <string name="title_notifications">Settings</string>
    <string name="publish_nav">Publish</string>
    <string name="save_project_title">Save project</string>
    <string name="publish">Publish</string>
    <string name="save">Save</string>
    <string name="edit_site_name">Edit Site Name</string>
    <string name="edit_jumbotron_title">Edit Jumbotron Title</string>
    <string name="edit_jumbotron_text">Edit Jumbotron Text</string>
    <string name="jumbotron_example_text">This is your first page!!! Enjoy!</string>
    <string name="sample_text_for_button">Sample</string>
    <string name="short_link_error">Too short (at least 3 char)</string>
    <string name="link_contains_spaces_error">Site link should\'n contains any space</string>
    <string name="edit_button_text">Edit button text</string>
    <string name="edit_button_link">Edit button link</string>
    <string name="jumbotron">Jumbotron</string>
    <string name="select_the_button_style">Select The Button Style</string>
    <string name="button">Button</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="grey">Grey</string>
    <string name="violet">Violet</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
</resources>
