<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/navbar_edit_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:text="@string/edit_site_name"
            android:layout_marginStart="15dp"/>

        <EditText
            android:id="@+id/edit_site_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:maxLength="50" />


        <Switch
            android:id="@+id/switch_jumbotron"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Jumbotron" />

        <LinearLayout
            android:id="@+id/jumbotron_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/edit_jumbotron_title"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edit_jumbotron_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/edit_jumbotron_text"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edit_jumbotron_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>